--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -60,7 +60,7 @@
 
 .teacher_list {
     overflow-y: auto;
-    height: calc(100vh - 280px);
+    height: calc(100dvh - 280px);
     margin-bottom: 50px;
 }
 
@@ -147,13 +147,15 @@
 
 .add_icon {
     position: absolute;
-    width: 60px;
+    text-align: center;
+    width: 65px;
     height: 68px;
-    left: calc(50% - 30px);
+    left: calc(50% - 32px);
     top: -35px;
 }
 
 #add_circle {
+    fill: #735BF2;
     transition: fill .3s linear;
 }
 
@@ -162,15 +164,6 @@
     fill: #5f4cc0;
 }
 
-.footer_circle {
-    position: absolute;
-    -webkit-box-shadow:0px 0px 15px 0px rgba(0, 0, 0, 0.10) inset;
-    -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10) inset;
-    box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.10) inset;
-    z-index: -10;
-    left: calc(50% - 30px);
-    top: 0px;
-}
 
 /* Adaptation */
 
