--- a/assets/styles/hourCheck.css
+++ b/assets/styles/hourCheck.css
@@ -1,6 +1,7 @@
 body {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 
 /* Main */
@@ -8,7 +9,7 @@ main {
     height: calc(100dvh - 62px);
 }
 
-.calendar_wrapper {
+.wrapper {
     width: calc(100dvw - 40px);
     padding-left: 20px;
     padding-right: 20px;
@@ -29,13 +30,18 @@ header {
     line-height: 16px; /* 80% */
 }
 
+header h2 {
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
 header span {
     color: #8F9BB3;
     font-family: SF UI Text;
     font-size: 12px;
     font-style: normal;
     font-weight: 500;
-    line-height: 16px; /* 133.333% */
+    line-height: 16px;
 }
 
 .arrow {
@@ -53,6 +59,7 @@ header span {
 
 .calendar {
     padding: 20px;
+    padding-top: 15px;
 }
 .calendar ul {
     display: -webkit-box;
@@ -92,7 +99,6 @@ header span {
     margin-top: 30px;
     
     color: #222B45;
-
     text-align: center;
     font-family: SF UI Text;
     font-size: 15px;
@@ -124,6 +130,298 @@ header span {
 }
 
 
+.line {
+    margin-right: auto;
+    margin-left: auto;
+    border-radius: 3px;
+    width: 26px;
+    height: 4px;
+    background-color: #CED3DE;
+    opacity: 0.5;
+}
+
+/* Hour list */
+.hours_list {
+    margin-top: 42px;
+    padding-top: 18px;
+    padding-left: 14px;
+    padding-right: 14px;
+    padding-bottom: 18px;
+    font-family: SF UI Text;
+}
+
+.header_list_item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 12px;
+}
+
+.time {
+    color: #8F9BB3;
+    text-align: center;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.75px;
+}
+
+.time svg {
+    margin-right: 10px;
+}
+
+.circles_group {
+    display: flex;
+    justify-content: space-around;
+    width: 17px;
+}
+
+.circle {
+    height: 3px;
+    width: 3px;
+    border-radius: 50%;
+    background-color: #8F9BB3;;
+}
+
+.teacher_name {
+    color: #222B45;
+
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 19px; /* 118.75% */
+    letter-spacing: 1px;
+    margin-bottom: 8px;
+}
+
+.subject {
+    color: #8F9BB3;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.75px;
+}
+
+/* Modal */
+.modal {
+    display: none;
+    z-index: 9999;
+    position: absolute;
+    bottom: -70px;
+    width: calc(100dvw - 40px);
+    border-radius: 32px 32px 0px 0px;
+    box-shadow: 0px 3px 30px 0px rgba(0, 0, 0, 0.16);
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    background-color: rgb(255, 255, 255);
+    height: 80%;   
+}
+
+.modal_title {
+    margin-top: 32px;
+    margin-bottom: 21px;
+
+    color: #222B45;
+    text-align: center;
+    font-family: SF UI Text;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22px;
+}
+
+#theme {
+    margin-bottom: 11px;
+    width: calc(100dvw - 68px);
+    padding: 14px;
+    height: 70px;
+    border: 1px solid #EDF1F7;
+    resize: none;
+    border-radius: 8px;
+}
+
+#theme::placeholder {
+    color: #8F9BB3;
+
+    font-family: SF UI Text;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+.info {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.content_info {
+    display: flex;
+    justify-content: space-between;
+    width: 30%;
+    border: 1px #EDF1F7 solid;
+    padding: 11px 10px;
+    border-radius: 10px;
+}
+
+.info_text {
+    color: #8F9BB3;
+
+    font-family: SF UI Text;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px;
+}
+
+/* Dropdown select */
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700&display=swap");
+:root {
+  --color-black: hsl(0, 0%, 10%);
+  --color-darks: hsl(0, 0%, 20%);
+  --color-greys: hsl(0, 0%, 80%);
+  --color-light: hsl(0, 0%, 96%);
+  --color-white: hsl(0, 0%, 100%);
+  --color-blues: hsl(217, 91%, 60%);
+  --shadow-small: 0 1px 3px 0 rgba(0, 0, 0, 0.1),
+     0 1px 2px 0 rgba(0, 0, 0, 0.06);
+  --shadow-medium: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+     0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  --shadow-large: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+     0 4px 6px -2px rgba(0, 0, 0, 0.05);
+}
+
+.form-group {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  font-family: SF UI Text;
+  margin-bottom: 20px;
+}
+.form-arrow {
+  position: absolute;
+  top: 0.65rem;
+  right: 0.5rem;
+  z-index: 10;
+  font-size: 1.35rem;
+  line-height: inherit;
+  color: var(--color-darks);
+}
+.form .dropdown {
+  position: relative;
+}
+.form .dropdown-select {
+  position: relative;
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  cursor: pointer;
+  user-select: none;
+  width: calc(100dvw - 90px);
+  height: auto;
+  padding: 0.75rem 1.25rem;
+  border: none;
+  outline: none;
+  border-radius: 0.25rem;
+  color: black;
+  background-clip: padding-box;
+  background-color: rgb(255, 255, 255);
+  border: 1px solid #edf1f7;
+  border-radius: 8px;
+  transition: all 0.3s ease-in-out;
+}
+.form .dropdown-menu {
+  position: absolute;
+  display: none;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 10;
+  border-radius: 0.25rem;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-large);
+  transition: all 0.3s ease-in-out;
+}
+.form .dropdown-menu-inner {
+  max-height: 16rem;
+  text-align: center;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+.form .dropdown-menu-inner::-webkit-scrollbar-thumb {
+  border-radius: 0.25rem;
+  background-color: var(--color-greys);
+  box-shadow: var(--shadow-small);
+}
+.form .dropdown-menu-item {
+  font-family: inherit;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: inherit;
+  cursor: pointer;
+  user-select: none;
+  padding: 0.65rem 1.25rem;
+  background-color: white;
+  transition: all 0.2s ease-in-out;
+}
+
+.form .dropdown-menu-item:first-child {
+    border-radius: 5px 5px 0px 0px;
+}
+
+.form .dropdown-menu-item:last-child{
+    border-radius: 0px 0px 5px 5px;
+}
+.form .dropdown-menu-item:hover {
+  color: var(--color-black);
+  background-color: var(--color-greys);
+}
+.form .dropdown-menu-item.is-select, .form .dropdown-menu-item.is-select:hover {
+  color: var(--color-white);
+  background-color: #735BF2;;
+}
+
+.wrapper-column {
+  max-width: 40rem;
+  height: auto;
+  margin: 0 auto;
+  padding: 5rem 3rem;
+  border-radius: 0.25rem;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-medium);
+}
+
+.modal_btn {
+    font-family: SF UI Text;
+    width: calc(100dvw - 40px);
+    margin-top: auto;
+    margin-bottom: auto;
+    padding: 16px 20px;
+    border-radius: 8px;
+    background: #735BF2;
+    color: white;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 14px;
+    border: 0;
+    
+    position: absolute;
+    bottom: 17dvh;
+    left:50%;
+    transform:translate(-50%, 0%);
+    transition: background .4s ease;
+}
+
+.modal_btn:hover {
+  background-color: #5f4cc0;
+}
+
+
 /* Footer */
 .footer {
     display: flex;
@@ -149,6 +447,7 @@ header span {
     text-transform: uppercase;
     margin-top: auto;
     margin-bottom: auto;
+    color: #6C6D6D;
 }
 
 .footer_link img {
