--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -31,6 +31,13 @@ ol, ul {
 }
 a{
 	text-decoration: none;
+	color: black;
+}
+a:focus,
+a:active {
+	text-decoration: none;
+	border:0;
+	outline: none;
 }
 blockquote, q {
 	quotes: none;
