--- a/views/hourCheck.html
+++ b/views/hourCheck.html
@@ -47,7 +47,7 @@
             <div class="line"></div>
 
             <ul class="hours_list">
-                <li class="hours_list_item">
+                <li onclick="openModal('17.11', '16:20')" class="hours_list_item">
                     <div class="header_list_item">
                         <div class="time">
                             <svg height="13" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -74,43 +74,7 @@
             </ul>
         </div>
         <div class="modal">
-            <h2 class="modal_title">
-                Nowe zgłoszenie
-            </h2>
-            <form class="form" id="form" action="">
-                <div class="form-group">
-                    <span class="form-arrow"><i class="bx bx-chevron-down"></i></span>
-                    <select required name="type" id="type" class="dropdown ">
-                        <option value="kartkowka">Kartkówka</option>
-                        <option value="sprawdzian">Sprawdzian</option>
-                        <option value="pisanie zaleglej pracy">Pisanie Zaleglej Pracy</option>
-                    </select>
-                </div>
-                <textarea required name="theme" placeholder="Napisz temat oraz dodatkową informacje" id="theme"></textarea>
-                <div class="info">
-                    <div class="content_info">
-                        <div class="info_text">
-                            02.09
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="20" viewBox="0 0 18 20" fill="none">
-                            <rect x="1" y="2.79999" width="16" height="16.2" rx="2" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M12.556 1V4.6" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M5.444 1V4.6" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M1 8.20001H17" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            </svg>
-                    </div>
-                    <div class="content_info">
-                        <div class="info_text">
-                            14:20
-                        </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                            <circle cx="10" cy="10" r="9" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M10.5558 4.60001V10L14.1558 11.8" stroke="#8F9BB3" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </div>
-                </div>
-                <button class="modal_btn">Create Event</button>
-            </form>
+            
         </div>
     </main>
 
