--- a/views/yourHours.html
+++ b/views/yourHours.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/reset.css">
-    <link rel="stylesheet" href="../assets/styles/hourCheck.css">
+    <link rel="stylesheet" href="../assets/styles/yourHours.css">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,47 +12,27 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 
     <link href="https://fonts.cdnfonts.com/css/sf-ui-text-2" rel="stylesheet">
-    <title>Hours</title>
+    <title>Your Hours</title>
 <body>
+
+    <div class="header">
+        <h1 class="headerTitle">
+            Godziny Konsultacyjne
+        </h1>
+        <h4 class="headerSubTitle">
+            Na które jesteś zapisany
+        </h4>
+    </div>
 
     <main>
         <div class="wrapper">
-            <div class="calendar_wrapper">
-                <header>
-                    <svg class="arrow" id="prev" width="34" height="34" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12.0613 16.1401C12.0613 15.91 12.1578 15.6799 12.3504 15.5045L18.4137 9.98408C18.7994 9.63291 19.4248 9.63291 19.8104 9.98408C20.1959 10.3351 20.1959 10.9044 19.8104 11.2556L14.4452 16.1401L19.8102 21.0247C20.1957 21.3758 20.1957 21.945 19.8102 22.296C19.4246 22.6474 18.7993 22.6474 18.4136 22.296L12.3502 16.7757C12.1576 16.6002 12.0613 16.3701 12.0613 16.1401Z" fill="#222B45"/>
-                    </svg>
-                    
-                    <h2 class="current-date">November 2023</h2>
-    
-                    <svg class="arrow" id="next" width="34" height="34" viewBox="0 0 34 34" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12.0613 16.1401C12.0613 15.91 12.1578 15.6799 12.3504 15.5045L18.4137 9.98408C18.7994 9.63291 19.4248 9.63291 19.8104 9.98408C20.1959 10.3351 20.1959 10.9044 19.8104 11.2556L14.4452 16.1401L19.8102 21.0247C20.1957 21.3758 20.1957 21.945 19.8102 22.296C19.4246 22.6474 18.7993 22.6474 18.4136 22.296L12.3502 16.7757C12.1576 16.6002 12.0613 16.3701 12.0613 16.1401Z" fill="#222B45"/>
-                    </svg>
-                </header>
-                
-                <div class="calendar">
-                    <ul class="weeks">
-                      <li>Sun</li>
-                      <li>Mon</li>
-                      <li>Tue</li>
-                      <li>Wed</li>
-                      <li>Thu</li>
-                      <li>Fri</li>
-                      <li>Sat</li>
-                    </ul>
-                    <ul class="days"></ul>
-                </div>
-            </div>
-
-            <div class="line"></div>
-
             <ul class="hours_list">
                 <li onclick="openModal('17.11', '16:20')" class="hours_list_item">
                     <div class="header_list_item">
                         <div class="time">
                             <svg height="13" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <g id="Group 5">
-                                    <path id="Oval Copy 2" fill-rule="evenodd" clip-rule="evenodd" d="M4.89642 2.82486C3.75416 2.82486 2.82486 3.75417 2.82486 4.89642C2.82486 6.03868 3.75417 6.96798 4.89642 6.96798C6.03868 6.96798 6.96798 6.03867 6.96798 4.89642C6.96798 3.75416 6.03867 2.82486 4.89642 2.82486ZM4.89642 0C7.60064 0 9.79284 2.19221 9.79284 4.89642C9.79284 7.60064 7.60063 9.79284 4.89642 9.79284C2.19221 9.79284 0 7.60063 0 4.89642C0 2.19221 2.19221 0 4.89642 0Z" fill="#0095FF"/>
+                                    <path id="Oval Copy 2" fill-rule="evenodd" clip-rule="evenodd" d="M4.89642 2.82486C3.75416 2.82486 2.82486 3.75417 2.82486 4.89642C2.82486 6.03868 3.75417 6.96798 4.89642 6.96798C6.03868 6.96798 6.96798 6.03867 6.96798 4.89642C6.96798 3.75416 6.03867 2.82486 4.89642 2.82486ZM4.89642 0C7.60064 0 9.79284 2.19221 9.79284 4.89642C9.79284 7.60064 7.60063 9.79284 4.89642 9.79284C2.19221 9.79284 0 7.60063 0 4.89642C0 2.19221 2.19221 0 4.89642 0Z" fill="#00B383"/>
                                 </g>
                             </svg>
 
@@ -79,7 +59,7 @@
     </main>
 
     <footer class="footer">
-        <a class="footer_link"  href="yourHours.html">
+        <a class="footer_link"  href="#">
             <img src="../assets/images/watch.svg" alt="hours">
             <p>Your hours</p>
         </a>
@@ -100,8 +80,7 @@
         </a>
     </footer>
 
-    
-    <script src="../assets/scripts/hourChoose.js"></script>
+    <script src="../assets/scripts/yourHours.js"></script>
     <script src="../assets/scripts/hoursModal.js"></script>
 </body>
 </html>
